--- a/src/components/BrowseCharacters.css
+++ b/src/components/BrowseCharacters.css
@@ -1,31 +1,32 @@
-div {
-    padding: 2rem; /* Padding around the div */
-  }
-  
-  h2 {
-    color: #333; /* Dark text color for the heading */
-    font-size: 2rem; /* Increase font size for the heading */
-    margin-bottom: 1rem; /* Space below the heading */
+.characters a {
+    text-decoration: none;
+    color: brown;
+}
+
+h2 {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
   }
   
   ul {
-    list-style-type: none; /* Remove bullet points from the list */
-    margin: 0;
     padding: 0;
+    text-align: center;
+    text-decoration: none;
   }
   
   li {
-    margin-bottom: 0.5rem; /* Space below each list item */
+    list-style: none;
+    text-decoration: none;
   }
   
   a {
-    color: #007bff; /* Link color */
-    text-decoration: none; /* Remove underline */
-    font-size: 1.1rem; /* Increase font size */
-    transition: color 0.3s ease; /* Smooth transition for color change */
+    text-decoration: none;
+    color: inherit;
+    text-decoration: none;
   }
   
   a:hover {
-    color: #0056b3; /* Change color on hover (Darker blue) */
+    text-decoration: underline;
   }
   
