--- a/src/components/CharacterDetails.css
+++ b/src/components/CharacterDetails.css
@@ -4,8 +4,9 @@
   }
   
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     text-align: center;
+    font-weight: bolder;
   }
 
   img.boxy {
@@ -13,4 +14,4 @@
     margin-left: auto;
     margin-right: auto;
   }
-
+  
